--- a/webminds/public/cadastro.html
+++ b/webminds/public/cadastro.html
@@ -5,21 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <title>WM Meus Lembretes</title>
-    <link rel="stylesheet" href="style.css">
+    <title>cadastro</title>
+    <link rel="stylesheet" href="cada.css">
 </head>
+
 <body>
-   
+
 
 
     <div class="container">
-        <h1>Meus Lembretes</h1>
+        <h1>Cadastre-se</h1>
         <form method="post" id="cardForm">
-            <input type="text" id="name" name="name" placeholder="Título do card" required>
-            <input type="email" id="email" name="email" placeholder="Título do card" required>
-            <input type="password" id="password" name="password" placeholder="Título do card" required>
+            <input type="text" id="name" name="name" placeholder="Nome" required>
+            <input type="email" id="email" name="email" placeholder="Email" required>
+            <input type="password" id="password" name="password" placeholder="Senha" required>
            
-            <button type="submit">Adicionar Card</button>
+            <button type="submit">Fazer cadastro</button>
         </form>
 
         <div id="cardsContainer" class="cards-container">
