--- a/webminds/public/cadastro.html
+++ b/webminds/public/cadastro.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="cada.css">
 </head>
 
+<nav>
+    <ul class="menu">
+        <li><a href="#home">Home</a></li>
+        <li><a href="./cadastro.html">Cadastro</a></li>
+    </ul>
+</nav>
+
 <body>
 
 
