--- a/webminds/public/index.html
+++ b/webminds/public/index.html
@@ -8,9 +8,14 @@
     <title>WM Meus Lembretes</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-   
 
+    <nav>
+        <ul class="menu">
+            <li><a href="#home">Home</a></li>
+            <li><a href="./cadastro.html">Cadastro</a></li>
+        </ul>
+    </nav>
+<body>
 
     <div class="container">
         <h1>Meus Lembretes</h1>
