token, bcrypt e att add

--- a/public/home.html
+++ b/public/home.html
@@ -11,14 +11,16 @@
 
     <nav>
         <ul class="menu">
-            <li><a href="#home">Home</a></li>
-            <li><a href="./cadastro.html">Cadastro</a></li>
+            <li><a href="#home"><h1> Meus Lembretes</h1></a></li>
+            <li><a href="./cadastro.html"><h2>cadastro</h2></a></li>
+            <li><a href="./teste.html">teste do token</a></li>
+            <li><a href="#" onclick="logout()">Sair</a></li>
         </ul>
     </nav>
 <body>
 
     <div class="container">
-        <h1>Meus Lembretes</h1>
+       
         <form id="cardForm">
             <input type="text" id="titulo" name="titulo" placeholder="Título do card" required>
             <textarea id="descricao" name= "descricao" placeholder="Descrição do card" required></textarea>
@@ -30,6 +32,9 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js">
+
+
+    </script>
 </body>
 </html>
