--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <title>cadastro</title>
+    <title>Cadastro</title>
     <link rel="stylesheet" href="cada.css">
 </head>
 
 <nav>
     <ul class="menu">
-        <li><a href="#home">Home</a></li>
-        <li><a href="./cadastro.html">Cadastro</a></li>
+        <li><a href="#"><h1>Cadastre-se</h1></a></li>
+        <li><a href="./login.html"><h2>Login</h2></a></li>
     </ul>
 </nav>
 
@@ -21,7 +21,7 @@
 
 
     <div class="container">
-        <h1>Cadastre-se</h1>
+        
         <form method="post" id="cardForm">
             <input type="text" id="name" name="name" placeholder="Nome" required>
             <input type="email" id="email" name="email" placeholder="Email" required>
