add pag para teste do token

--- a/public/teste.html
+++ b/public/teste.html
@@ -3,40 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testar Token</title>
-</head>
-<body>
-    <h1>Testar Token com GET</h1>
-    <button id="testTokenBtn">Enviar Token</button>
-    <p id="response"></p>
+    <title>Verificar Token</title>
+    <style>
+         h2 {
+            font-size: 36px; 
+            text-align: center; }
+    </style>
 
     <script>
-        document.getElementById('testTokenBtn').addEventListener('click', async () => {
-            const token = localStorage.getItem('token'); // Pega o token do localStorage
-            
+        document.addEventListener('DOMContentLoaded', () => {
+            const token = localStorage.getItem('token'); 
+
             if (!token) {
-                document.getElementById('response').textContent = 'Token não encontrado no localStorage!';
-                return;
-            }
-
-            try {
-                const response = await fetch('/teste', {
-                    method: 'GET',
-                    headers: {
-                        'Authorization': `Bearer ${token}`
-                    }
-                });
-
-                if (response.ok) {
-                    const data = await response.text(); 
-                    document.getElementById('response').textContent = `Resposta do servidor: ${data}`;
-                } else {
-                    document.getElementById('response').textContent = `Erro: ${response.status}`;
-                }
-            } catch (error) {
-                document.getElementById('response').textContent = `Erro na requisição: ${error}`;
+                
+                document.body.innerHTML = '<h1>Você não tem o token!! <br> Faça o login 👇</h1> <a href="./login.html">Clique aqui para fazer login</a>'; 
             }
         });
     </script>
+</head>
+<body>
+   <h2>O token está funcionando !!! 🥳 <br> 😁🎈</h2>
+   
+
+
 </body>
 </html>
