--- a/public/home.html
+++ b/public/home.html
@@ -12,7 +12,7 @@
     <nav>
         <ul class="menu">
             <li><a href="#home"><h1> Meus Lembretes</h1></a></li>
-            <li><a href="./cadastro.html"><h2>cadastro</h2></a></li>
+            <li><a href="./cadastro.html">cadastro</a></li>
             <li><a href="./teste.html">teste do token</a></li>
             <li><a href="#" onclick="logout()">Sair</a></li>
         </ul>
