--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -24,7 +24,7 @@
         
         <form method="post" id="cardForm">
             <input type="text" id="name" name="name" placeholder="Nome" required>
-            <input type="email" id="email" name="email" placeholder="Email" required>
+            <input type="text" id="email" name="email" placeholder="Email" required>
             <input type="password" id="password" name="password" placeholder="Senha" required>
            
             <button type="submit">Fazer cadastro</button>
