--- a/public/home.html
+++ b/public/home.html
@@ -13,7 +13,7 @@
         <ul class="menu">
             <li><a href="#home"><h1> Meus Lembretes</h1></a></li>
             <li><a href="./cadastro.html">cadastro</a></li>
-            <li><a href="./teste.html">teste do token</a></li>
+            <!--<li><a href="./teste.html">teste do token</a></li>-->
             <li><a href="#" onclick="logout()">Sair</a></li>
         </ul>
     </nav>
