--- a/public/login.html
+++ b/public/login.html
@@ -13,7 +13,7 @@
     <ul class="menu">
         <li><a href="./home.html">Home</a></li>
         <li><a href="./cadastro.html">Cadastro</a></li>
-        <li><a href="./teste.html">teste do token</a></li>
+      <!--  <li><a href="./teste.html">teste do token</a></li> -->
         
     </ul>
 </nav>
