--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -26,6 +26,10 @@
             <input type="text" id="name" name="name" placeholder="Nome" required>
             <input type="text" id="email" name="email" placeholder="Email" required>
             <input type="password" id="password" name="password" placeholder="Senha" required>
+            <div class="input-group">
+                <input type="file" class="form-control" id="inputGroupFile04" name="image" aria-describedby="inputGroupFileAddon04" aria-label="Upload">
+                
+              </div>
            
             <button type="submit">Fazer cadastro</button>
         </form>
