--- a/public/home.html
+++ b/public/home.html
@@ -17,7 +17,7 @@
             <!--<li><a href="./teste.html">teste do token</a></li>-->
             <li class="dropdown">
                 <a href="#" class="dropbtn"> <span id="user-name">Nome do Usuário</span>
-                  <img   id="user-image" src="" alt="User Image" class="user-img">
+                  <img   id="user-image" src="" alt="ImageUser " class="user-img">
                   
                 </a>
                 <div class="dropdown-content">
